maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not found: value sortie
  setIndication(sortie(0),sortie(1),0)
                ^JediEscaper:15: error: not found: value sortie
  setIndication(sortie(0),sortie(1),0)
                          ^