maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  
  var x= 0
  var y = 0
  
  for (i<- 0 to getMondeLargeur()-1) {
    for (j <- 0 to getMondeHauteur()-1) {
      if (aBiscuit(i,j)) {
        x=i
        y=j
      }
    }
  }
  setIndication(sortie(0),sortie(1),0)
  
    
  }
